--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,5 @@ include ':text-impl'
 include ':color-api'
 include ':color-impl'
 include ':color-setup-feature'
+include ':banner-api'
+include ':banner-impl'
