--- a/banner-impl/build.gradle
+++ b/banner-impl/build.gradle
@@ -10,10 +10,10 @@ java {
 dependencies {
     api project(":banner-api")
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-
     implementation project(":storage")
     implementation project(":text-api")
     implementation project(":color-api")
+
     implementation java_x.inject
+    implementation kotlin_libs.coroutines_core
 }
