--- a/banner-api/build.gradle
+++ b/banner-api/build.gradle
@@ -8,5 +8,5 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 dependencies {
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation kotlin_libs.coroutines_core
 }
