--- a/color-impl/build.gradle
+++ b/color-impl/build.gradle
@@ -12,9 +12,8 @@ dependencies {
     api project(":color-api")
 
     implementation java_x.inject
-    implementation "androidx.datastore:datastore-core:1.0.0"
-
-    implementation  "com.google.protobuf:protobuf-javalite:3.21.12"
+    implementation support.datastore_core
+    implementation  google.protobuf
 }
 
 protobuf {
