--- a/text-presentation-feature/build.gradle
+++ b/text-presentation-feature/build.gradle
@@ -12,6 +12,6 @@ dependencies {
 
     implementation project(":android-core")
 
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation support.recyclerview
 
 }
